public/css/style.css
/* ... */
.sticker__wrapper {
  width: 100%;
  max-width: 1150px;
  margin: 0 auto;
}
.sticker__img {
  max-width: 1000px;
  margin: 0 auto;
  margin-bottom: 15px;
}
.sticker__img img {
  width: 100%;
}
.sticker__info {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}
.sticker__info .carpark__item-row {
  margin-bottom: 5px;
}
.sticker__info-tech {
  margin-right: 30px;
  -webkit-flex-shrink: 0;
      -ms-flex-negative: 0;
          flex-shrink: 0;
}
.sticker__info-more {
  margin-right: 46px;
  -webkit-flex-shrink: 0  ;
      -ms-flex-negative: 0  ;
          flex-shrink: 0  ;
  width: 410px;
}
.sticker__title {
  font-size: 24px;
  line-height: 29px;
  margin-bottom: 17px;
}
@media (max-width: 1330px) {
  .sticker__info {
    -webkit-flex-wrap: wrap;
        -ms-flex-wrap: wrap;
            flex-wrap: wrap;
  }
  .sticker__order {
    margin-top: 20px;
    margin-left: auto;
  }
  .sticker__info-more {
    margin-right: 0;
    width: 50%;
  }
}
@media (max-width: 950px) {
  .sticker__info {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
        -ms-flex-direction: column;
            flex-direction: column;
    -webkit-box-align: center;
    -webkit-align-items: center;
        -ms-flex-align: center;
            align-items: center;
  }
  .sticker__order {
    margin-left: 0;
    width: 100%;
    max-width: 400px;
  }
  .sticker__info-tech {
    margin-right: 0;
    width: 100%;
    max-width: 400px;
  }
  .sticker__info-more {
    width: 100%;
    max-width: 400px;
  }
  .sticker__info-more .carpark__item-col {
    max-width: 50%;
  }
  .sticker__info-more .carpark__item-col:last-child {
    padding-left: 10px;
    text-align: right;
  }
}

